[tool.poetry]
name = "python-poetry-project"
version = "0.1.0"
description = "Checking out poetry"
authors = ["Syed Mohsin Bukhari"]
readme = "README.md"
packages = [{include = "python_poetry_project"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
